log
Sun, Mar 30, 2025  4:33:14 PM: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Sun, Mar 30, 2025  4:36:06 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 15/70
1d269a7
Sun, Mar 30, 2025  4:36:50 PM: 
 tests:  2|5
total_score: 15/70
b15aea0
Sun, Mar 30, 2025  4:39:11 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 25/70
f04e3ca
Sun, Mar 30, 2025  5:01:57 PM: 
 list.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:92:22: error: 'temp' undeclared (first use in this function)
   92 |     void* dato_aux = temp->aux;
      |                      ^~~~
list.c:92:22: note: each undeclared identifier is reported only once for each function it appears in
list.c:91:11: error: unused variable 'aux' [-Werror=unused-variable]
   91 |     Node* aux = list->current;
      |           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
8893122
Sun, Mar 30, 2025  5:03:08 PM: 
 list.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  5|4
total_score: 25/70
d5cf5a5
Sun, Mar 30, 2025  5:05:40 PM: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  6|3
total_score: 40/70
0e78130
Sun, Mar 30, 2025  5:13:01 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  7|3
total_score: 40/70
c743299
Sun, Mar 30, 2025 10:28:42 PM: 
 list.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  7|3
total_score: 40/70
5033b1c
Sun, Mar 30, 2025 10:31:20 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 50/70
7b7aa6a
